--- a/style.css
+++ b/style.css
@@ -113,6 +113,31 @@ body {
     position: relative;
     background-color: white;
 }
+.bcg-parallax{
+    padding:150px 0;
+    color:#fff;
+    background-color: black;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+}
+.bcg{
+    background: url("img/img_background.jpg") no-repeat;
+    background-size: cover;
+    position: absolute;
+    width: 100%;
+    height:150%;
+    top:0;
+    z-index:1;
+    opacity: 0.7;
+}
+.content-wrapper{
+    width:90%;
+    margin:0 auto;
+    max-width: 1140px;
+    position: relative;
+    z-index: 2;
+}
 
 /* =Footer */
 .footer-container {
